--- a/assets/css/_installation.styl
+++ b/assets/css/_installation.styl
@@ -51,7 +51,8 @@
     background orange
     min-height 18px
     +below(small-snap)
-      line-height 22px
+      line-height 20px
+      max-height 18px
     &:hover, &.zeroclipboard-is-hover
       background white
       color orange
