--- a/assets/css/_share.styl
+++ b/assets/css/_share.styl
@@ -4,8 +4,8 @@
   text-align center
   background grey
   padding (xl-padding-block - 17) 0
-  +below(small-snap)
-    padding (med-padding-block - 17) 0
+  +below(med-snap)
+    padding (xl-padding-block - 14) 0 xl-padding-block 0
   h1
     +below(small-snap)
       font-size 1.8rem
